--- a/_includes/blogpost.html
+++ b/_includes/blogpost.html
@@ -1,3 +1,31 @@
 {% for post in site.posts %}
-<article class="post-container"><div class="post-image"><a href="{{ page.url }}" title="{{ page.title }}">{% if page.url contains "/amp" %}<amp-img src='{{ page.image }}' title='{{ page.title }}' alt='{{ page.title}}' layout='responsive' width='16' height='9'></amp-img>{% else %}<img data-src="{{ page.image }}" loading='lazy' src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAA7KqwyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAAD6AAAA+gBtXtSawAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAAYSURBVCiRY0xISOBgoAAwUaJ51IBhYwAAuQABOsYCprwAAAAASUVORK5CYII=' class='lazy' alt="{{ page.title }}">{% endif %}</a></div><div class="post-content"><h2><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h2><p class="author"><strong>Author:</strong> {{ page.author }}</p><p class="summary">{{ page.description }}</p></div></article>
+<article class="post-container">
+  <div class="post-image">
+    <a href="{{ post.url }}" title="{{ post.title }}">
+      {% if post.url contains "/amp" %}
+        <amp-img 
+          src="{{ post.image }}" 
+          title="{{ post.title }}" 
+          alt="{{ post.title }}" 
+          layout="responsive" 
+          width="16" 
+          height="9">
+        </amp-img>
+      {% else %}
+        <img 
+          data-src="{{ post.image }}" 
+          loading="lazy" 
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAA7KqwyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAAD6AAAA+gBtXtSawAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAAYSURBVCiRY0xISOBgoAAwUaJ51IBhYwAAuQABOsYCprwAAAAASUVORK5CYII=" 
+          class="lazy" 
+          alt="{{ post.title }}">
+      {% endif %}
+    </a>
+  </div>
+
+  <div class="post-content">
+    <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+    <p class="author"><strong>Author:</strong> {{ post.author }}</p>
+    <p class="summary">{{ post.description }}</p>
+  </div>
+</article>
 {% endfor %}
