--- a/_includes/blogpost.html
+++ b/_includes/blogpost.html
@@ -5,7 +5,7 @@
     
     <div class="post-image">
       <a href="{{ post.url }}" title="{{ post.title }}" itemprop="url">
-        {% if page.is_amp %}
+        {% if page.is_amp or page.url contains '/amp/' %}
           <amp-img 
             src="{{ post.image }}" 
             title="{{ post.title }}" 
