--- a/_includes/blogpost.html
+++ b/_includes/blogpost.html
@@ -5,7 +5,7 @@
     
     <div class="post-image">
       <a href="{{ post.url }}" title="{{ post.title }}" itemprop="url">
-        {% if post.url contains "/amp/" %}
+        {% if page.url contains "/amp/" %}
   <amp-img 
     src="{{ post.image }}" 
     alt="{{ post.title }}" 
@@ -15,9 +15,8 @@
   </amp-img>
 {% else %}
   <img 
-    data-src="{{ post.image }}" 
+    src="{{ post.image }}" 
     loading="lazy" 
-    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAA7KqwyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAAD6AAAA+gBtXtSawAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAAYSURBVCiRY0xISOBgoAAwUaJ51IBhYwAAuQABOsYCprwAAAAASUVORK5CYII=" 
     class="lazy" 
     alt="{{ post.title }}">
 {% endif %}
