--- a/_includes/blogpost.html
+++ b/_includes/blogpost.html
@@ -15,7 +15,9 @@
   </amp-img>
 {% else %}
   <img 
-    src="{{ post.image }}" 
+    src="{{ post.image }}"
+    width="1600"
+    height="900"
     loading="lazy" 
     class="lazy" 
     alt="{{ post.title }}">
