--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,4 +2,35 @@
 layout: default
 description: Kumpulan artikel dari kategori yang kamu pilih.
 ---
-{% include blogpost.html %}
+<h1 class='main-heading'>Arsip</h1>
+{% if page.title == "Categories" %}
+  <h2>Categories</h2>
+  <ul>
+    {% for category in site.categories %}
+      <li><a href="{{ site.baseurl }}/kategori/{{ category[0] }}">{{ category[0] }}</a></li>
+    {% endfor %}
+  </ul>
+{% elsif page.title == "Tags" %}
+  <h2>Tags</h2>
+  <ul>
+    {% for tag in site.tags %}
+      <li><a href="{{ site.baseurl }}/tag/{{ tag[0] }}">{{ tag[0] }}</a></li>
+    {% endfor %}
+  </ul>
+{% elsif page.title == "Year Archives" %}
+  <h2>Year Archives</h2>
+  <ul>
+    {% for year in site.posts | group_by_exp: "post", "post.date | date: '%Y'" %}
+      <li><a href="{{ site.baseurl }}/arsip/{{ year.name }}">{{ year.name }}</a></li>
+    {% endfor %}
+  </ul>
+{% elsif page.title == "Month Archives" %}
+  <h2>Month Archives</h2>
+  <ul>
+    {% for month in site.posts | group_by_exp: "post", "post.date | date: '%Y-%m'" %}
+      <li><a href="{{ site.baseurl }}/arsip/{{ month.name | split: '-' | first }}/{{ month.name | split: '-' | last }}">{{ month.name }}</a></li>
+    {% endfor %}
+  </ul>
+{% else %}
+  <p>No archives available.</p>
+{% endif %}
