--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,20 +7,20 @@
     <div class="sidebar-heading">Arsip</div>
       <ul>
       <li class="accordion">
-        <input type="radio" name="accordion" id="cat1">
-        <label for="cat1">Kategori<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
+        <input type="radio" name="accordion" id="accordion1">
+        <label for="accordion1">Kategori<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
         <div class="content">
           {% for category in site.categories %}
-          <a href="/kategori/{{ category[0] | downcase }}/" title="{{ category[0] }}">{{ category[0] }}</a> ({{ category[1].size }})
+          <a href="/kategori/{{ category[0] | downcase }}/" title="{{ category[0] }}">{{ category[0] }}</a>
           {% endfor %}
         </div>
       </li>
       <li class="accordion">
-        <input type="radio" name="accordion" id="cat1">
-        <label for="cat1">Tag<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
+        <input type="radio" name="accordion" id="accordion2">
+        <label for="accordion2">Tag<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
         <div class="content">
           {% for tag in site.tags %}
-          <a href="/tag/{{ tag[0] | downcase }}/" title="{{ tag[0] }}">{{ tag[0] }}</a> ({{ tag[1].size }})
+          <a href="/tag/{{ tag[0] | downcase }}/" title="{{ tag[0] }}">{{ tag[0] }}</a>
           {% endfor %}
         </div>
       </li>
