--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,16 @@
           {% endfor %}
         </div>
       </li>
+      <li class="accordion">
+        <input type="radio" name="accordion" id="accordion3">
+        <label for="accordion3">Arsip<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
+        <div class="content">
+          {% assign posts_by_year = site.posts | group_by_exp: "post", "post.date | date: '%Y'" %}
+          {% for group in posts_by_year %}
+          <a href="/arsip/{{ group.name }}/" title="{{ group.name }}">{{ group.name }}</a>
+          {% endfor %}
+        </div>
+      </li>
     </ul>
   <div class="sidebar-section">
     <div class="sidebar-heading">Ikuti Kami</div>
