--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,5 +1,12 @@
 ---
 layout: default
+description: "Arsip berisi kumpulan artikel berdasarkan filter arsip yang kamu inginkan."
+keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
+robots: "index, follow"
+image: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
+timezone: "Asia/Jakarta"
+robots: "index, follow"
+lang: "id"
 ---
 <h1 class='main-heading'>
     {% if page.type == "category" %}
