--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -38,7 +38,45 @@ layout: default
     {% endif %}
   </h1>
 {% if page.posts and page.posts != empty %}
-{% include blogpost.html %}
+<div itemscope itemtype="https://schema.org/ItemList">
+    {% for post in page.posts %}
+    <article class="post-container" itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
+      <meta itemprop="position" content="{{ forloop.index }}">
+      <div class="post-image">
+        <a href="{{ post.url }}" title="{{ post.title }}" itemprop="url">
+          {% if page.url contains "/amp/" %}
+    <amp-img 
+      src="{{ post.image }}" 
+      alt="{{ post.title }}" 
+      width="16" 
+      height="9" 
+      layout="responsive">
+    </amp-img>
+  {% else %}
+    <img 
+      src="{{ post.image }}"
+      width="1600"
+      height="900"
+      loading="lazy" 
+      class="lazy" 
+      alt="{{ post.title }}">
+  {% endif %}
+  
+        </a>
+      </div>
+  
+      <div class="post-content">
+        <h2>
+          <a href="{{ post.url }}" title="{{ post.title }}" itemprop="name">{{ post.title }}</a>
+        </h2>
+        <p class="author">
+          <strong>Author:</strong> <span itemprop="author">{{ post.author }}</span>
+        </p>
+        <p class="summary" itemprop="description">{{ post.description }}</p>
+      </div>
+    </article>
+    {% endfor %}
+  </div>  
 {% else %}
   <p>Tidak ada konten di arsip ini.</p>
 {% endif %}
