--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,7 @@
 layout: default
 lang: "id"
 ---
+<p>Page Type: {{ page.type }}</p>
 <h1 class='main-heading'>
     {% if page.type == "category" %}
       {{ page.title }}
