--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,5 +1,10 @@
 ---
 layout: default
+description: Daftar konten yang ada disortir sesuai pilihan arsip.
+image: https://asibuka.com/assets/img/ASIBUKA-Blue.webp
+author: ASIBUKA Group
+robots: index, follow
+keywords: bulan, arsip
 lang: id
 ---
 <p>Page Type: {{ page.type }}</p>
