--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.defaults.lang }}">
+<html lang="{{ page.lang | default: site:lang }}">
 <head>
   {% include meta.html %}
   <style>{% include style.css %}</style>
