--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,7 +11,7 @@
     <title>{{ page.title | default: site.title }}</title>
     <meta content='{{ page.title | default: site.title }}' name='title'>
     <meta name="description" content="{{ page.description | default: site.description }}">
-    <meta name="keywords" content="{{ page.tags | default: site.tags }}">
+    <meta name="keywords" content="{{ page.keywords | default: site.keywords }}">
     <meta name="author" content="{{ page.author | default: site.author }}">
     <meta name="robots" content="{{ page.robots | default: site.robots }}">
     <!-- Facebook Open Graph -->
