adding right sidebar ads

--- a/_includes/right-sidebar.html
+++ b/_includes/right-sidebar.html
@@ -3,7 +3,6 @@
     {% include image.html src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSh1lk0dfxkwn2yyprbXhD0p-SX-tbI238i6QXPPy96FBO-SDRlY3NkqcjHPmzv6ht6E_qu9de8ubQ1HMxUSRRhsN0Xuzo8fVCKS0wEk63mT1iR8xaiWQ4jpUgKOLQzSZF8yMwOqfGowA/s300-rw/tema.jpg' width='300' height='300' layout='responsive' %}
     </div>
     <div class="sticky-box">
-      <h2>Kolom Iklan Disini</h2>
-      <p>Di kolom ini kamu bisa memasang iklan banner atau text untuk mempromosikan website-mu atau untuk mendapatkan backlink dari website ASIBUKA Group dan mendongkrak SEO websitemu.</p>
+      {% include sidebar_ads.html %}
     </div>
   </aside>
