--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <main aria-label="Main Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
 {{ content }}
 </main>
-{% include html/right-sidebar.html %}
+{% include right-sidebar.html %}
 </div>
 {% include noprint.html %}
 {% include script-body.js %}
