--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -7,6 +7,7 @@ robots: index, follow
 keywords: bulan, arsip
 lang: id
 ---
+<p>{{ page.layout }}</p>
 <h1 class='main-heading'>
     {% if page.type == "category" %}
       {{ page.title }}
