--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -8,6 +8,7 @@ keywords: bulan, arsip
 lang: id
 ---
 <p>{{ page.layout }}</p>
+<p>{{ page.type }}</p>
 <h1 class='main-heading'>
     {% if page.type == "category" %}
       {{ page.title }}
@@ -51,24 +52,13 @@ lang: id
       <meta itemprop="position" content="{{ forloop.index }}">
       <div class="post-image">
         <a href="{{ post.url }}" title="{{ post.title }}" itemprop="url">
-          {% if page.url contains "/amp/" %}
-    <amp-img 
-      src="{{ post.image }}" 
-      alt="{{ post.title }}" 
-      width="16" 
-      height="9" 
-      layout="responsive">
-    </amp-img>
-  {% else %}
-    <img 
-      src="{{ post.image }}"
+    <img src="{{ post.image }}"
       width="1600"
       height="900"
       loading="lazy" 
       class="lazy" 
-      alt="{{ post.title }}">
-  {% endif %}
-  
+      alt="{{ post.title }}"
+      title="{{ post.title }}">
         </a>
       </div>
   
