--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,8 +10,10 @@
         <input type="radio" name="accordion" id="accordion1">
         <label for="accordion1">Kategori<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
         <div class="content">
-          {% for category in site.categories %}
-          <a href="/kategori/{{ category[0] | downcase }}/" title="{{ category[0] }}">{{ category[0] }}</a>
+          {% assign all_categories = site.posts | map: "categories" | join: "," | split: "," | uniq | sort %}
+          {% for category in all_categories %}
+          {% assign cat_slug = category | strip | downcase | replace: ' ', '-' %}
+          <a href="/kategori/{{ cat_slug }}/" title="{{ category | capitalize }}">{{ category | capitalize }}</a>
           {% endfor %}
         </div>
       </li>
@@ -20,7 +22,7 @@
         <label for="accordion2">Tag<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
         <div class="content">
           {% for tag in site.tags %}
-          <a href="/tag/{{ tag[0] | downcase }}/" title="{{ tag[0] }}">{{ tag[0] }}</a>
+          <a href="/tag/{{ tag[0] | downcase | slugify }}/" title="{{ tag[0] }}">{{ tag[0] }}</a>
           {% endfor %}
         </div>
       </li>
@@ -28,9 +30,20 @@
         <input type="radio" name="accordion" id="accordion3">
         <label for="accordion3">Arsip<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
         <div class="content">
-          {% assign posts_by_year = site.posts | group_by_exp: "post", "post.date | date: '%Y'" %}
-          {% for group in posts_by_year %}
-          <a href="/arsip/{{ group.name }}/" title="{{ group.name }}">{{ group.name }}</a>
+          {% assign years = site.posts | map: "date" | map: "year" | uniq | sort | reverse %}
+          {% for year in years %}
+          <a href="/arsip/{{ year }}/" title="{{ year }}">{{ year }}</a>
+          {% endfor %}
+        </div>
+      </li>
+      <li class="accordion">
+        <input type="radio" name="accordion" id="accordion4">
+        <label for="accordion4">Penulis<svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></label>
+        <div class="content">
+          {% assign authors = site.posts | map: "author" | uniq | compact %}
+          {% for author in authors %}
+          {% assign slug = author | downcase | replace: ' ', '-' %}
+          <a href="/penulis/{{ slug }}/" title="{{ author }}">{{ author }}</a>
           {% endfor %}
         </div>
       </li>
