--- a/_includes/right-sidebar.html
+++ b/_includes/right-sidebar.html
@@ -1,6 +1,6 @@
 <aside class="right-sidebar">
     <div class='static-box'>
-    {% include image.html src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSh1lk0dfxkwn2yyprbXhD0p-SX-tbI238i6QXPPy96FBO-SDRlY3NkqcjHPmzv6ht6E_qu9de8ubQ1HMxUSRRhsN0Xuzo8fVCKS0wEk63mT1iR8xaiWQ4jpUgKOLQzSZF8yMwOqfGowA/s300-rw/tema.jpg' width='300' height='300' layout='responsive' %}
+    <div class="text-center"><p>Type: {{ page.type }}</p><p>Layout: {{ page.layout }}</p><p>Page is AMP: {{ page.is_amp }}</p></div>
     </div>
     <div class="sticky-box">
       {% include html/sidebar_ads.html %}
