--- a/_includes/blogpost.html
+++ b/_includes/blogpost.html
@@ -4,23 +4,14 @@
     <meta itemprop="position" content="{{ forloop.index }}">
     <div class="post-image">
       <a href="{{ post.url }}" title="{{ post.title }}" itemprop="url">
-        {% if page.url contains "/amp/" %}
-  <amp-img 
-    src="{{ post.image }}" 
-    alt="{{ post.title }}" 
-    width="16" 
-    height="9" 
-    layout="responsive">
-  </amp-img>
-{% else %}
   <img 
     src="{{ post.image }}"
     width="1600"
     height="900"
     loading="lazy" 
     class="lazy" 
-    alt="{{ post.title }}">
-{% endif %}
+    alt="{{ post.title }}"
+    title="{{ post.title }}">
 
       </a>
     </div>
