--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,30 +1,46 @@
 ---
 layout: default
 ---
+
 <h1 class='main-heading'>
   {{ page.title }}
 </h1>
 
-{% if posts and posts != empty %}
+{% if page.posts and page.posts != empty %}
 <div itemscope itemtype="https://schema.org/ItemList">
   {% for post in page.posts %}
     <article class="post-container" itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
       <meta itemprop="position" content="{{ forloop.index }}">
+
       <div class="post-image">
-        <a href="{{ post.url }}" title="{{ post.title }}" itemprop="url">
-          <img src="{{ post.image }}"
-            width="1600"
-            height="900"
-            loading="lazy" 
-            class="lazy" 
-            alt="{{ post.title }}"
-            title="{{ post.title }}">
+        <a href="{{ post.url | relative_url }}" title="{{ post.title }}" itemprop="url">
+          {% if page.is_amp %}
+            <amp-img 
+              src="{{ post.image }}" 
+              width="1600" 
+              height="900" 
+              loading="lazy" 
+              class="lazy" 
+              alt="{{ post.title }}" 
+              title="{{ post.title }}" 
+              layout="responsive">
+            </amp-img>
+          {% else %}
+            <img 
+              src="{{ post.image }}" 
+              width="1600" 
+              height="900" 
+              loading="lazy" 
+              class="lazy" 
+              alt="{{ post.title }}" 
+              title="{{ post.title }}">
+          {% endif %}
         </a>
       </div>
 
       <div class="post-content">
         <h2>
-          <a href="{{ post.url }}" title="{{ post.title }}" itemprop="name">{{ post.title }}</a>
+          <a href="{{ post.url | relative_url }}" title="{{ post.title }}" itemprop="name">{{ post.title }}</a>
         </h2>
         <p class="author">
           <strong>Author:</strong> <span itemprop="author">{{ post.author }}</span>
@@ -32,7 +48,7 @@ layout: default
         <p class="summary" itemprop="description">{{ post.description }}</p>
       </div>
     </article>
-    {% endfor %}
+  {% endfor %}
 </div>  
 {% else %}
   <p>Tidak ada konten di arsip ini.</p>
