--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1 class='main-heading'>
-  {{ page.title }}
+  {{ page.title | capitalize }}
 </h1>
 
 {% if page.posts and page.posts != empty %}
