--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -3,53 +3,50 @@ layout: default
 ---
 
 <h1 class='main-heading'>
-  {{ page.title | capitalize }}
+  {% if page.year and page.month %}
+    {{ page.month | date: "%B" | capitalize }} {{ page.year }}
+  {% elsif page.year %}
+    {{ page.year }}
+  {% elsif page.category %}
+    {{ page.category | capitalize }}
+  {% elsif page.tags %}
+    {{ page.tags | first | capitalize }}  <!-- Get first tag and capitalize -->
+  {% else %}
+    Arsip
+  {% endif %}
 </h1>
 
 {% if page.posts and page.posts != empty %}
-<div itemscope itemtype="https://schema.org/ItemList">
-  {% for post in page.posts %}
-    <article class="post-container" itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-      <meta itemprop="position" content="{{ forloop.index }}">
+  <div itemscope itemtype="https://schema.org/ItemList">
+    {% for post in page.posts %}
+      <article class="post-container" itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
+        <meta itemprop="position" content="{{ forloop.index }}">
 
-      <div class="post-image">
-        <a href="{{ post.url | relative_url }}" title="{{ post.title }}" itemprop="url">
-          {% if page.is_amp %}
-            <amp-img 
-              src="{{ post.image }}" 
-              width="1600" 
-              height="900" 
-              loading="lazy" 
-              class="lazy" 
-              alt="{{ post.title }}" 
-              title="{{ post.title }}" 
-              layout="responsive">
-            </amp-img>
-          {% else %}
-            <img 
-              src="{{ post.image }}" 
-              width="1600" 
-              height="900" 
-              loading="lazy" 
-              class="lazy" 
-              alt="{{ post.title }}" 
-              title="{{ post.title }}">
-          {% endif %}
-        </a>
-      </div>
+        <div class="post-image">
+          <a href="{{ post.url | relative_url }}" title="{{ post.title }}" itemprop="url">
+              <img 
+                src="{{ post.image }}" 
+                width="1600" 
+                height="900" 
+                loading="lazy" 
+                class="lazy" 
+                alt="{{ post.title }}" 
+                title="{{ post.title }}">
+          </a>
+        </div>
 
-      <div class="post-content">
-        <h2>
-          <a href="{{ post.url | relative_url }}" title="{{ post.title }}" itemprop="name">{{ post.title }}</a>
-        </h2>
-        <p class="author">
-          <strong>Author:</strong> <span itemprop="author">{{ post.author }}</span>
-        </p>
-        <p class="summary" itemprop="description">{{ post.description }}</p>
-      </div>
-    </article>
-  {% endfor %}
-</div>  
+        <div class="post-content">
+          <h2>
+            <a href="{{ post.url | relative_url }}" title="{{ post.title }}" itemprop="name">{{ post.title }}</a>
+          </h2>
+          <p class="author">
+            <strong>Author:</strong> <span itemprop="author">{{ post.author }}</span>
+          </p>
+          <p class="summary" itemprop="description">{{ post.description }}</p>
+        </div>
+      </article>
+    {% endfor %}
+  </div>  
 {% else %}
   <p>Tidak ada konten di arsip ini.</p>
 {% endif %}
