--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -13,7 +13,8 @@ layout: default
     {{ page.tags | first | capitalize }}
   {% endif %}
 </h1>
-
+<p>Year: {{ page.year }}</p>
+<p>Month: {{ page.month }}</p>
 {% if page.posts and page.posts != empty %}
   <div itemscope itemtype="https://schema.org/ItemList">
     {% for post in page.posts %}
