--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -7,24 +7,25 @@ robots: index, follow
 
 <h1 class='main-heading'>
   {% if page.type == "month" %}
-  <!-- Month archive (e.g., /2025/08/) -->
-  {% assign month_number = page.url | split: '/' | last %}
-  {% assign year = page.url | split: '/' | second %}
+    <!-- Month archive (e.g., /2025/08/) -->
+    {% assign month_number = page.url | split: '/' | last %}
+    {% assign year = page.url | split: '/' | second %}
+    
+    {% capture month_names %}
+      "Januari", "Februari", "Maret", "April", "Mei", "Juni", 
+      "Juli", "Agustus", "September", "Oktober", "November", "Desember"
+    {% endcapture %}
+    {% assign month_names_array = month_names | split: ',' %}
+    {% assign month_name = month_names_array[month_number | minus: 1] %}
+    
+    {{ month_name | strip }} {{ year }}
   
-  {% capture month_names %}
-    "Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-    "Juli", "Agustus", "September", "Oktober", "November", "Desember"
-  {% endcapture %}
-  {% assign month_names_array = month_names | split: ',' %}
-  {% assign month_name = month_names_array[month_number | minus: 1] %}
-  
-  {{ month_name | strip }} {{ year }}
   {% elsif page.type == "year" %}
-  <!-- Year archive (e.g., /2025/) -->
-  {% assign year = page.url | split: '/' | second %}
-  {{ year }}
-  {% else %}
-  {{ page.title | capitalize }}
+    <!-- Year archive (e.g., /2025/) -->
+    {% assign year = page.url | split: '/' | second %}
+    {{ year }}
+    {% else %}
+  {{ page.title }}
   {% endif %}
 </h1>
 <p>Year: {{ page.year }}</p>
