--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -8,17 +8,19 @@ robots: index, follow
 <h1 class='main-heading'>
   {% if page.type == "month" %}
     <!-- Month archive (e.g., /2025/08/) -->
-    {% assign month_number = page.url | split: '/' | last %}
-    {% assign year = page.url | split: '/' | second %}
-    
-    {% capture month_names %}
-      "Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-      "Juli", "Agustus", "September", "Oktober", "November", "Desember"
-    {% endcapture %}
-    {% assign month_names_array = month_names | split: ',' %}
-    {% assign month_name = month_names_array[month_number | minus: 1] %}
-    
-    {{ month_name | strip }} {{ year }}
+    {% assign url_parts = page.url | split: '/' %}
+{% assign year = url_parts[1] %}
+{% assign month_number = url_parts[2] %}
+
+{% capture month_names %}
+  "Januari", "Februari", "Maret", "April", "Mei", "Juni", 
+  "Juli", "Agustus", "September", "Oktober", "November", "Desember"
+{% endcapture %}
+{% assign month_names_array = month_names | split: ',' %}
+{% assign month_name = month_names_array[month_number | minus: 1] %}
+
+{{ month_name | strip }} {{ year }}
+
   
   {% elsif page.type == "year" %}
     <!-- Year archive (e.g., /2025/) -->
